--- a/3dpaws-frontend/package.json
+++ b/3dpaws-frontend/package.json
@@ -12,7 +12,7 @@
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "classnames": "^2.5.1",
-    "next": "14.2.3",
+    "next": "^15.0.3",
     "react": "^18",
     "react-burger-menu": "^3.0.9",
     "react-chartjs-2": "^5.2.0",
